--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@types/morgan": "^1.9.3",
     "@types/node-cron": "^2.0.4",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "ts-dotenv": "^0.8.3"
   },
