--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "dev": "nodemon ./src/app.ts",
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/src/app.js"
+    "start": "node build/app.js"
   }
 }
