--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_PASSWORD }}
+          password: ${{ secrets.DEPLOY_TOKEN }}
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.2.2
         with:
