--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^83.0.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "ts-dotenv": "^0.8.3"
