--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/connect-timeout": "^0.0.35",
     "@types/morgan": "^1.9.3",
     "@types/node-cron": "^2.0.4",
     "axios": "^0.21.1",
+    "connect-timeout": "^1.9.0",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
